--- a/myapp/public/application.json
+++ b/myapp/public/application.json
@@ -3,11 +3,14 @@
 		"payloadfns": [],
 		"otaa": [],
 		"abp": [{
-			"devaddr": "000000002B286014"
+			"devaddr": "00000000C2E67547",
+                        "icon": "http://maps.google.com/mapfiles/ms/icons/red-dot.png"
 		}, {
-			"devaddr": "00000000702C0FD9"
+			"devaddr": "00000000702C0FD9",
+                        "icon": "http://maps.google.com/mapfiles/ms/icons/green-dot.png"
 		}, {
-			"devaddr": "00000000C2E67547"
+			"devaddr": "000000002B286014",
+                        "icon": "http://maps.google.com/mapfiles/ms/icons/blue-dot.png"
 		}]
 	}
 }
