--- a/GPS_Location_Tracker/package.json
+++ b/GPS_Location_Tracker/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node nodejs/ttn-server.js;node ./bin/www"
+    "start": "node bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
+    "socket.io": "^1.7.3",
     "ttn": "^2.0.0-7"
   }
 }
