--- a/LoRa_Demo/package.json
+++ b/LoRa_Demo/package.json
@@ -21,6 +21,7 @@
     "promise": "^7.1.1",
     "serve-favicon": "~2.3.2",
     "socket.io": "^1.7.3",
+    "ttn": "^2.1.0",
     "ws": "^2.1.0"
   }
 }
